[package]
name = "termux-adb"
version = "0.1.0"
edition = "2021"

[lib]
name = "adbhooks"
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4.0"
libc = "0.2.134"
nix = { version = "0.25.0", features = ["fs"] }
redhook = { version = "2.0.0", path = "../redhook" }
