[package]
name = "adb-hooks"
version = "0.1.2"
edition = "2021"

[lib]
name = "adbhooks"
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.65"
ctor = "0.1.23"
dlhook = { version = "0.1.0", path = "../dlhook" }
dlhook-macros = { version = "0.1.0", path = "../dlhook-macros"}
libc = "0.2.134"
nix = { version = "0.25.0", features = ["fs"] }
rand = "0.8.5"
rusb = { git = "https://github.com/nohajc/rusb.git", branch = "master" }
#rusb = { path = "../../rusb" }
log = "0.4.0"
env_logger = "0.9.0"
sendfd = "0.4.3"
