[package]
name = "termux-adb"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.65"
nix = { version = "0.25.0", features = ["fs", "signal"] }
serde = { version = "1.0.145", features = ["derive"] }
serde_json = "1.0.85"
sysinfo = "0.26.4"
which = "4.3.0"
